--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="location_hint">Search URL</string>
     <string name="term_hint">Term</string>
     <string name="add_search_label">Add New Search</string>
-    <string name="manage_label">Manage Searches</string>
+    <string name="manage_label">SuperSearch: Manage Searches</string>
 </resources>
