--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="manage_label">Manage Searches</string>
     <string name="title_help">Help</string>
 
+	<string name="list_menu_help">Help</string>
+
 
     <string name="msg_copyright">Copyright &#169; 2008 Arthur Axel "fREW" Schmidt http://blog.afoolishmanifesto.com</string>
 
