--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,5 +29,5 @@
 
     <string name="help_intro">Please select a topic below for more information on a particular subject.</string>
 
-    <string name="msg_version">SuperSearch (working copy)</string>
+    <string name="msg_version">SuperSearch (1.0)</string>
 </resources>
